# disf-ras-official

./: .env  .gitignore  LICENSE  README.md  build.sh  requirements.txt  run.sh  setup.cfg  setup.py
assets/kuka/: generated_scene_pretty.xml  kuka.xml  kuka_hand.xml  umi_gripper.xml
assets/panda/: generated_scene_pretty.xml  panda.xml  panda_hand.xml
assets/ur5e/: generated_scene_pretty.xml  ur5e.xml  ur5e_hand.xml
docker/: Dockerfile
scripts/utils/: compose_axis_angles_usecase.py
src/args/: __init__.py  parse_args.py  parse_args_real.py
src/config_loader/: ConfigLoader.py  __init__.py
src/contact_detection/: __init__.py  detect_gripper_box_intersection_canonical.py  detect_plane_intersection.py
src/correspondence_matching/: ICPPointMatcher.py  ICPPointMatcherWithNormals.py  __init__.py  filter_by_angle_threshold.py  filter_by_finger_normals.py  filter_duplicates.py  orient_target_normals_towards_source.py
src/domain_object/: __init__.py
src/grasp_planning/: ISF_Planning_With_Single_ICP.py  __init__.py
src/hand_surface_generation/: _generate_surface_panda_hand copy.py  generate_surface.py  generate_surface_panda_hand.py  generate_surface_ur5e_hand.py
src/mujoco_grasping/: FrameCapture.py  GraspEvaluation.py  ISFMujocoGraspingYCBObjectEvaluation.py  MujocoGraspingArmGraspViaPregrasp.py  MujocoHandAloneEnv.py  __init__.py
src/obj2mjcf/: README.md
src/point_cloud_clustering/: KMeansClusterer.py  compute_cluster_centroids.py  visualize_point_clusters.py
src/point_cloud_generation/: __init__.py  _generate.py  manual_two_rect_planes_point_cloud.py
(+330 files in other folders)
