[metadata]
name                          = disf_project
version                       = 0.1.0
author                        = Tomoya Yamanokuchi
author_email                  = yamanokuchi.tomoya@naist.ac.jp
description                   = A project with multiple packages
long_description              = file: README.md
long_description_content_type = text/markdown
url                           = https://tomoya-yamanokuchi.github.io/disf-ras-project-page/
classifiers                   =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Ubuntu20.04

[options]
packages        = find:
package_dir     =
                = src
python_requires = >=3.10
